# udho

./: .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .readthedocs.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  access.cpp  activities-states.xlsx  application.cpp  bridge.cpp  cache.cpp  client.cpp  configuration.cpp  connection.cpp  contexts.cpp  defs.cpp  flatten.cpp  folding.cpp  forms.cpp  graph.dot  http_session.cpp  listener.cpp  logging.cpp  mkdocs.yml  monoid.cpp  page.cpp  parser.cpp  req.cpp  requirements.txt  router.cpp  sandbox.cpp  scope.cpp  server.cpp  session.cpp  url.cpp  util.cpp
cmake/: FindLuaJIT.cmake  FindPugiXML.cmake
doc/: conf.py
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  activities.md  build.md  build.sh  cldoc.sh  conf.py  index.h  index.md  index.rst  qtify.css  router.rst  routing.rst  server.md  session.md  style.css  udho-special.css
docs.del/: server.md
docs.md/: index.md
docs.sphinx/: Doxyfile.in  build.sh  conf.py  content.rst
docs/pages/: activities.md  build.md  context.md  database.md  form.md  index.md  query.md  router.md  server.md  session.md
docs/pages/db/: activities.md  overview.md  relation.md  subtask.md
docs/parts/: activities-states.dox
docs/parts/snippets/activities/minimal/: activity.h  async_activity.h  combinator.cpp  data.h  timer_activity.h
docs/source/: Doxyfile  conf.py  index.rst
docs/source/pages/: activities.rst  build.rst  context.rst  contributing.rst  form.rst  server.rst
examples/: CMakeLists.txt  activities.cpp  application.cpp  folding.cpp  form.cpp  functor.cpp  hello.cpp  pg.cpp  simple.cpp  view.cpp
examples/simple/: CMakeLists.txt  main.cpp  manifest.cpp  manifest.h
examples/simple/applications/: CMakeLists.txt  main.cpp  main.h  user.cpp  user.h
examples/templates/: planet.html
examples/www/: planet.html
impl/udho/: page.ipp
includes/udho/: access.h  activities.h  application.h  attachment.h  bridge.h  cache.h  client.h  compositors.h  configuration.h  connection.h  context.h  context.old.h  contexts.h  cookie.h  defs.h  folding.h  form.h  forms.h  hazo.h  http_listener.h  http_session.h  listener.h  logging.h  page.h  parser.h  req.h  router.h  scope.h  server.h  session.h  url.h  util.h  visitor.h  watcher.h
includes/udho/activities/: accessor.h  activities.h  activity.h  after.h  analyzer.h  collector.h  combinator.h  conveniance.h  data.h  dataset.h  detail.h  fwd.h  joined.h  perform.h  require.h  result.h  result_data.h  start.h  states.h.del  subtask.h
includes/udho/core/: application.h  manifest.h
includes/udho/db/: common.h  fieldset.h  pg.h
includes/udho/db/common/: common.h  detail.h  none.h  on_error.h  result.h  results.h
includes/udho/db/pg/: activities.h  constructs.h  crud.h  decorators.h  features.h  generators.h  io.h  model.h  pg.h  pretty.h  schema.h
includes/udho/db/pretty/: detail.h  fwd.h  pretty.h  printer.h  type.h
includes/udho/exceptions/: exceptions.h
includes/udho/folding/: folding.h  hana.h  map.h  node.h  seq.h
includes/udho/folding/detail/: call_helper.h  extraction_helper.h  indices.h
includes/udho/folding/map/: capsule.h  element.h  encapsulation.h  fwd.h  hana.h  helpers.h  io.h  map.h  proxy.h  tag.h
includes/udho/folding/node/: capsule.h  fwd.h  io.h  node.h  proxy.h  tag.h
includes/udho/folding/seq/: hana.h  helpers.h  io.h  proxy.h  seq.h  tag.h
includes/udho/hazo/: hana.h  hazo.h  map.h  node.h  seq.h
includes/udho/hazo/detail/: call_helper.h  extraction_helper.h  function.h  fwd.h  fwd.h.del  has_member.h  has_member_type.h  indices.h  is_streamable.h  monoid.h  monoid.h.del  operations.h.del
includes/udho/hazo/map/: basic.h  capsule.h  capsule.h.del  element.h  encapsulation.h  encapsulation.h.del  fwd.h  hana.h  helpers.h  io.h  map.h  operations.h  proxy.h  tag.h
includes/udho/hazo/node/: basic.h  capsule.h  encapsulate.h  fwd.h  io.h  meta.h  node.h  proxy.h  tag.h
includes/udho/hazo/operations/: append.h  eliminate.h  exclude.h  first_of.h  flatten.h  fwd.h  prepend.h  rest_of.h
includes/udho/hazo/seq/: basic.h  fwd.h  hana.h  helpers.h  io.h  operations.h  proxy.h  seq.h  tag.h
includes/udho/hazo/string/: basic.h
includes/udho/net/: artifacts.h  bridge.h  common.h  connection.h  context.h  context_impl.h  environment.h  fwd.h  handle.h  listener.h  server.h  stream.h
includes/udho/net/protocols/: http.h  protocols.h  scgi.h
includes/udho/pretty/: detail.h  fwd.h  pretty.h  printer.h  type.h
includes/udho/url/: action.h  fwd.h  io.h  mount.h  operators.h  pattern.h  router.h  summary.h  tabulate.h  url.h  verb.h  word.h
includes/udho/url/detail/: format.h  function.h
includes/udho/view/: bridges.h  data.h  interop.h  meta.h  metatype.h  parser.h  reflect.h  reflection.h  resources.h  scope.h  sections.h  shortcode_parser.h  trie.h
includes/udho/view/bridges/: basic_bridge.h  bridge.h  chai.h  fwd.h  lua.h  script.h
includes/udho/view/data/: associative.h  bindings.h  data.h  detail.h  fwd.h  json.h  metatype.h  nvp.h  operators.h  type.h
includes/udho/view/meta/: meta.h
includes/udho/view/resources/: fwd.h  (+4 more)
sources/udho/: page.cpp
sphinx/source/: conf.py  index.rst
sphinx/source/md/: activities.md
sphinx/source/md.del/: build.md
sphinx/source/pages/: activities.rst  context.rst  form.rst  index.rst  logging.rst  router.rst  session.rst
tests/: CMakeLists.txt  activity.cpp  client.cpp  decorators.cpp  folding.cpp  generators.cpp  hazo.cpp  parsing.cpp  routing.cpp  sandbox.cpp  sql.cpp
tests2/: CMakeLists.txt  x.cpp
tests2/activities/: CMakeLists.txt  activity.cpp  application.cpp  data.cpp  subtask.cpp
tests2/activity/: data.cpp
tests2/db/: CMakeLists.txt
tests2/db/pg/: CMakeLists.txt  activities.cpp  activity.cpp  basic_activity.cpp  common.h  decorators.cpp  generators.cpp  join.cpp  model.cpp  schema.h
tests2/hazo/: CMakeLists.txt  element.cpp  legacy.cpp  map.cpp  meta.cpp  node.cpp  proxy.cpp  seq.cpp
tests2/net/: CMakeLists.txt  network.cpp
tests2/url/: CMakeLists.txt  url.cpp
tests2/view/: CMakeLists.txt  parser.cpp  resources.cpp
(+109 files in other folders)
